prevent wrapping in docs toc

--- a/src/assets/scss/components/toc.scss
+++ b/src/assets/scss/components/toc.scss
@@ -10,6 +10,7 @@
         li {
             margin-bottom: .25rem;
             margin-block-end: .25rem;
+            display: flex;
         }
 
         li::before {
